<resources>
    <string name="app_name">Proiect MDS</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_budget">Budget</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="user_settings">Account</string>
    <string name="theme">Theme</string>
    <string name="bitBucket" translatable="false">BitBucket</string>
    <string name="Jira" translatable="false">Jira</string>
    <string name="color">Status Bar Color</string>

    <!-- Messages Preferences -->
    <string name="username">Your password</string>
    <string name="email">Your email</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="dark_mode">Dark Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="navBar">Navigation Bar</string>
    <string name="statBar">Status Bar</string>
    <string name="budget2">Budget</string>
    <string name="budget">Budget</string>
    <string name="spending">Spending</string>
    <string name="menu_gallery">Gallery</string>
    <string name="organize_budget">This helps your organize your budget</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="switch_dark">Switches between Light and Dark mode</string>
    <string name="change_nav">Change your navigation bar\'s color</string>
    <string name="change_status">Customize your status bar\'s color</string>
    <string name="bitBucket_commits">Come look at our BitBucket commits</string>
    <string name="Jira_issues">Inspect our Jira Issues</string>
    <string name="add_spending">Add Spending</string>
    <string name="choose_location">Choose location</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="select_image">Select image</string>
    <string name="buy">Buy</string>
    <string name="purhcase_made">Purchase made</string>
    <string name="cancel_buy">Cancel</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="menu_statistics">Statistics</string>
    <string name="no_statistics">No data</string>
    <string name="favourite_product">Favourite product</string>
    <string name="most_bought">Most bought items</string>
    <string name="linked_client_alert">Add Partner Account</string>
    <string name="title_alert_partner">Link partner</string>
    <string name="message_alert_partner">Enter email address</string>
    <string name="number_of_visits">Number of visits</string>
</resources>