<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_settings">

        <EditTextPreference
            app:key="email"
            app:title="@string/email"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="password"
            app:title="@string/username"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme">

        <SwitchPreferenceCompat
            app:key="dark"
            app:summary="@string/switch_dark"
            app:title="@string/dark_mode" />

        <ListPreference
            app:key="color"
            app:title="@string/navBar"
            app:entries="@array/colors"
            app:entryValues="@array/colors"
            app:summary="@string/change_nav"/>

        <ListPreference
            app:key="color2"
            app:title="@string/statBar"
            app:entries="@array/colors"
            app:entryValues="@array/colors"
            app:summary="@string/change_status"/>

    </PreferenceCategory>
    <PreferenceCategory app:title="About us">

        <Preference
            app:key="bitbucket"
            app:title="@string/bitBucket"
            app:summary="@string/bitBucket_commits"/>

        <Preference
            app:key="jira"
            app:title="@string/Jira"
            app:summary="@string/Jira_issues"/>

    </PreferenceCategory>

</PreferenceScreen>